--- a/siso/package.json
+++ b/siso/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.18.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "antd": "^5.12.1",
     "clsx": "^2.0.0",
     "jotai": "^2.6.0",
     "next": "14.0.3",
