--- a/siso/package.json
+++ b/siso/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.18",
     "antd": "^5.12.1",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
     "jotai": "^2.6.0",
     "next": "14.0.3",
     "react": "^18",
